fix bug scrolling desktop
Fixed bug which blocked the horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -1015,9 +1015,7 @@ footer .marge-bot{
   background-color: white;
 }
 
-#loaded{
-  display: none;
-}
+
 
 .container-loader{
   width: 80%;
